[package]
name = "adventofcode2019"
version = "0.1.0"
authors = ["Niklas Hallqvist <niklas@hallqvist.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
closure = "0.2.0"
core_memo = "0.1.0"
evmap = "7.1.3"
itertools = "0.8.2"
lazy_static = "1.4.0"
modinverse = "0.1.1"
modular = "1.0.0"
num = "0.2.0"
num-integer = "0.1.41"
num-rational = "0.2.2"
permute = "0.1"
regex = "1.3.1"
simple-error = "0.2"
topological-sort = "0.1"